--- a/4_2_1_CSV_Jupyter_Copy10.ipynb
+++ b/4_2_1_CSV_Jupyter_Copy10.ipynb
@@ -12,6 +12,9 @@
     "Lieu = os.getcwd()  ## methode Get Current Worked Directory pour lire la page Web crée dans le dossier courant.\n",
     "###\n",
     "import os\n",
+    "\n",
+    "import subprocess, sys\n",
+    "\n",
     "import time\n",
     "from reportlab.lib.enums import TA_JUSTIFY\n",
     "from reportlab.lib.pagesizes import letter\n",
@@ -266,7 +269,9 @@
     "    Story.append(Spacer(1, 12))\n",
     "\n",
     "    doc.build(Story)\n",
-    "    os.startfile(\"Infos_Lieux_Stages.pdf\")"
+    "#     os.startfile(\"Infos_Lieux_Stages.pdf\")\n",
+    "    opener = \"open\" if sys.platform == \"darwin\" else \"xdg-open\"\n",
+    "    subprocess.call([opener, \"Infos_Lieux_Stages.pdf\"])"
    ]
   },
   {
@@ -291,7 +296,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f2c90f80b3a344c3aff07d5acdd237c0",
+       "model_id": "7a231f33ae2841049f106176da7affd5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -310,14 +315,23 @@
       "selection =  ['CRISTAL-UNION , Bazancourt']\n",
       "type = <class 'list'>\n",
       "selection =  ['CRISTAL-UNION , Bazancourt', 'GIVAUDAN (Ex. Soliance)']\n",
-      "apres btn pdf, selection = ['CRISTAL-UNION , Bazancourt', 'GIVAUDAN (Ex. Soliance)']\n",
       "type = <class 'list'>\n",
-      "selection =  ['CRISTAL-UNION , Bazancourt', 'GIVAUDAN (Ex. Soliance)', 'MHCS  (Champagne Moët et Chandon)']\n",
-      "type = <class 'list'>\n",
-      "selection =  ['CRISTAL-UNION , Bazancourt', 'GIVAUDAN (Ex. Soliance)', \"Laboratoire Départemental d’Analyses et de Recherche (LDAR) de l'Aisne.\", 'MHCS  (Champagne Moët et Chandon)']\n",
-      "type = <class 'list'>\n",
-      "selection =  ['CRISTAL-UNION , Bazancourt', 'Delpharm Reims', 'GIVAUDAN (Ex. Soliance)', \"Laboratoire Départemental d’Analyses et de Recherche (LDAR) de l'Aisne.\", 'MHCS  (Champagne Moët et Chandon)']\n",
-      "apres btn pdf, selection = ['CRISTAL-UNION , Bazancourt', 'Delpharm Reims', 'GIVAUDAN (Ex. Soliance)', \"Laboratoire Départemental d’Analyses et de Recherche (LDAR) de l'Aisne.\", 'MHCS  (Champagne Moët et Chandon)']\n"
+      "selection =  ['CRISTAL-UNION , Bazancourt', 'GIVAUDAN (Ex. Soliance)', \"Laboratoire Départemental d’Analyses et de Recherche (LDAR) de l'Aisne.\"]\n",
+      "apres btn pdf, selection = ['CRISTAL-UNION , Bazancourt', 'GIVAUDAN (Ex. Soliance)', \"Laboratoire Départemental d’Analyses et de Recherche (LDAR) de l'Aisne.\"]\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[WinError 2] Le fichier spécifié est introuvable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-7-e076391e1349>\u001b[0m in \u001b[0;36mCreate_pdf\u001b[1;34m(_)\u001b[0m\n\u001b[0;32m     57\u001b[0m \u001b[1;31m#     os.startfile(\"Infos_Lieux_Stages.pdf\")\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     58\u001b[0m     \u001b[0mopener\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"open\"\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0msys\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplatform\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m\"darwin\"\u001b[0m \u001b[1;32melse\u001b[0m \u001b[1;34m\"xdg-open\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 59\u001b[1;33m     \u001b[0msubprocess\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcall\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mopener\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Infos_Lieux_Stages.pdf\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\anaconda3\\lib\\subprocess.py\u001b[0m in \u001b[0;36mcall\u001b[1;34m(timeout, *popenargs, **kwargs)\u001b[0m\n\u001b[0;32m    338\u001b[0m     \u001b[0mretcode\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcall\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"ls\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"-l\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    339\u001b[0m     \"\"\"\n\u001b[1;32m--> 340\u001b[1;33m     \u001b[1;32mwith\u001b[0m \u001b[0mPopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mpopenargs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mp\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    341\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    342\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwait\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtimeout\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtimeout\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\subprocess.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, args, bufsize, executable, stdin, stdout, stderr, preexec_fn, close_fds, shell, cwd, env, universal_newlines, startupinfo, creationflags, restore_signals, start_new_session, pass_fds, encoding, errors, text)\u001b[0m\n\u001b[0;32m    856\u001b[0m                             encoding=encoding, errors=errors)\n\u001b[0;32m    857\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 858\u001b[1;33m             self._execute_child(args, executable, preexec_fn, close_fds,\n\u001b[0m\u001b[0;32m    859\u001b[0m                                 \u001b[0mpass_fds\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcwd\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0menv\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    860\u001b[0m                                 \u001b[0mstartupinfo\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcreationflags\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mshell\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\subprocess.py\u001b[0m in \u001b[0;36m_execute_child\u001b[1;34m(self, args, executable, preexec_fn, close_fds, pass_fds, cwd, env, startupinfo, creationflags, shell, p2cread, p2cwrite, c2pread, c2pwrite, errread, errwrite, unused_restore_signals, unused_start_new_session)\u001b[0m\n\u001b[0;32m   1309\u001b[0m             \u001b[1;31m# Start the process\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1310\u001b[0m             \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1311\u001b[1;33m                 hp, ht, pid, tid = _winapi.CreateProcess(executable, args,\n\u001b[0m\u001b[0;32m   1312\u001b[0m                                          \u001b[1;31m# no special security\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1313\u001b[0m                                          \u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 2] Le fichier spécifié est introuvable"
      ]
     }
    ],
@@ -345,7 +359,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6ce06183edda448e8303d663c376f2e3",
+       "model_id": "7643c6a433e349a8999ea45ac77cd539",
        "version_major": 2,
        "version_minor": 0
       },
