--- a/4_2_1_CSV_Jupyter_Copy11.ipynb
+++ b/4_2_1_CSV_Jupyter_Copy11.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "from ipywidgets import *\n",
+    "from IPython.display import IFrame\n",
     "import webbrowser\n",
     "import csv ## https://docs.python.org/fr/3.6/library/csv.html \n",
     "import os ## Pour utiliser la methode ci-dessous Get Current Worked Directory pour lire la page Web crée dans le dossier courant.\n",
@@ -284,6 +285,9 @@
     "#     print(\"filepath=\",filepath)\n",
     "#     Yep = IFrame(filepath, width=700, height=400)\n",
     "#     display(Yep)\n",
+    "\n",
+    "    yep = IFrame(\"./files/simple3.pdf\", width=600, height=300)\n",
+    "    display(yep)\n",
     "#############\n",
     "    # url = 'https://' + 'www.google.com'\n",
     "    url = Lieu+\"\\Infos_Lieux_Stages.pdf\"\n",
@@ -314,7 +318,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "000a779c6c9f47e1a7813a3a05ab9ef3",
+       "model_id": "f33bb3601eee4c3889acb5f4faeae4ac",
        "version_major": 2,
        "version_minor": 0
       },
@@ -332,11 +336,31 @@
       "type = <class 'list'>\n",
       "selection =  ['CRISTAL-UNION , Bazancourt']\n",
       "type = <class 'list'>\n",
-      "selection =  ['CRISTAL-UNION , Bazancourt', 'Delpharm Reims']\n",
+      "selection =  ['CRISTAL-UNION , Bazancourt', 'GIVAUDAN (Ex. Soliance)']\n",
       "type = <class 'list'>\n",
-      "selection =  ['CRISTAL-UNION , Bazancourt', 'Delpharm Reims', \"Laboratoire Départemental d’Analyses et de Recherche (LDAR) de l'Aisne.\"]\n",
-      "apres btn pdf, selection = ['CRISTAL-UNION , Bazancourt', 'Delpharm Reims', \"Laboratoire Départemental d’Analyses et de Recherche (LDAR) de l'Aisne.\"]\n"
+      "selection =  ['CRISTAL-UNION , Bazancourt', 'GIVAUDAN (Ex. Soliance)', 'MHCS  (Champagne Moët et Chandon)']\n",
+      "apres btn pdf, selection = ['CRISTAL-UNION , Bazancourt', 'GIVAUDAN (Ex. Soliance)', 'MHCS  (Champagne Moët et Chandon)']\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"600\"\n",
+       "            height=\"300\"\n",
+       "            src=\"./files/simple3.pdf\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x10c146a4fd0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -363,7 +387,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2789f86f8a39486ea33fed28aef692b7",
+       "model_id": "c125c9d14bb04c88b14a781c476864c4",
        "version_major": 2,
        "version_minor": 0
       },
