--- a/4_2_1_CSV_Jupyter_Copy11.ipynb
+++ b/4_2_1_CSV_Jupyter_Copy11.ipynb
@@ -9,6 +9,7 @@
     "from ipywidgets import *\n",
     "from IPython.display import IFrame\n",
     "import webbrowser\n",
+    "import requests\n",
     "import csv ## https://docs.python.org/fr/3.6/library/csv.html \n",
     "import os ## Pour utiliser la methode ci-dessous Get Current Worked Directory pour lire la page Web crée dans le dossier courant.\n",
     "Lieu = os.getcwd()  ## methode Get Current Worked Directory pour lire la page Web crée dans le dossier courant.\n",
@@ -277,23 +278,31 @@
     "#     subprocess.call([opener, \"Infos_Lieux_Stages.pdf\"])\n",
     "#####\n",
     "#     try:\n",
-    "#         subprocess.Popen(['Infos_Lieux_Stages.pdf'], shell=True)\n",
+    "#         subprocess.Popen(['https://mybinder.readthedocs.io/en/latest/tutorials/dockerfile.html'], shell=True)\n",
     "#     except IOError:\n",
     "#         print ('The file is already OPENED!')\n",
     "###########\n",
-    "#     filepath = Lieu+\"\\Infos_Lieux_Stages.pdf\"\n",
+    "    filepath = Lieu+\"\\Infos_Lieux_Stages.pdf\"\n",
+    "#     display(filepath)\n",
+    "    display(HTML(\"\"\"<a href=\"\"\"+filepath+\"\"\" target=\"_blank\">pdf </a>\"\"\"))\n",
+    "#     filepath = \"https://mybinder.readthedocs.io/en/latest/tutorials/dockerfile.html\"\n",
     "#     print(\"filepath=\",filepath)\n",
     "#     Yep = IFrame(filepath, width=700, height=400)\n",
     "#     display(Yep)\n",
-    "\n",
-    "    yep = IFrame(\"./files/simple3.pdf\", width=600, height=300)\n",
-    "    display(yep)\n",
+    "#####\n",
+    "#     yep = IFrame(\"./files/simple3.pdf\", width=600, height=300)\n",
+    "#     display(yep)\n",
     "#############\n",
-    "    # url = 'https://' + 'www.google.com'\n",
-    "    url = Lieu+\"\\Infos_Lieux_Stages.pdf\"\n",
-    "    webbrowser.open(url)\n",
+    "\n",
+    "#     print(\"Lieu = \",Lieu)\n",
+    "#     url = Lieu+\"\\Infos_Lieux_Stages.pdf\"\n",
+    "#     print(\"url = \",url)\n",
+    "\n",
     "######\n",
-    "    # <a href=\"http://example.com/\" target=\"_blank\">link</a>"
+    "    # <a href=\"http://example.com/\" target=\"_blank\">link</a>\n",
+    "#######\n",
+    "#     r = requests.get(url, allow_redirects=True)\n",
+    "#     open('infos.pdf', 'wb').write(r.content)"
    ]
   },
   {
@@ -318,7 +327,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f33bb3601eee4c3889acb5f4faeae4ac",
+       "model_id": "b3d018c2237d4e458f62e5734fd13d13",
        "version_major": 2,
        "version_minor": 0
       },
@@ -337,26 +346,18 @@
       "selection =  ['CRISTAL-UNION , Bazancourt']\n",
       "type = <class 'list'>\n",
       "selection =  ['CRISTAL-UNION , Bazancourt', 'GIVAUDAN (Ex. Soliance)']\n",
-      "type = <class 'list'>\n",
-      "selection =  ['CRISTAL-UNION , Bazancourt', 'GIVAUDAN (Ex. Soliance)', 'MHCS  (Champagne Moët et Chandon)']\n",
-      "apres btn pdf, selection = ['CRISTAL-UNION , Bazancourt', 'GIVAUDAN (Ex. Soliance)', 'MHCS  (Champagne Moët et Chandon)']\n"
+      "apres btn pdf, selection = ['CRISTAL-UNION , Bazancourt', 'GIVAUDAN (Ex. Soliance)']\n"
      ]
     },
     {
      "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"600\"\n",
-       "            height=\"300\"\n",
-       "            src=\"./files/simple3.pdf\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "        ></iframe>\n",
-       "        "
-      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9b801751760b4e6297d57fe133c4c6b4",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x10c146a4fd0>"
+       "HTML(value='<a href=C:\\\\Users\\\\dfial\\\\Documents\\\\00_Stage_App\\\\Infos_Lieux_Stages.pdf target=\"_blank\">pdf </a>…"
       ]
      },
      "metadata": {},
@@ -387,7 +388,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c125c9d14bb04c88b14a781c476864c4",
+       "model_id": "fd2615d630ff497fb66a310d18a3c736",
        "version_major": 2,
        "version_minor": 0
       },
