--- a/4_2_1_CSV_Jupyter_Copy12.ipynb
+++ b/4_2_1_CSV_Jupyter_Copy12.ipynb
@@ -506,6 +506,63 @@
     "# filepath = \"file.pdf\"\n",
     "# IFrame(filepath, width=700, height=400)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4bca1e424a49485797f6f4840275a26d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HTML(value='<html>\\n<head>\\n<meta name=\"viewport\" content=\"width=device-width, initial-scale=1\">\\n</head>\\n<bo…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from ipywidgets import HTML\n",
+    "# from IPython.display import display\n",
+    "\n",
+    "import base64\n",
+    "\n",
+    "res = 'david'\n",
+    "\n",
+    "#FILE\n",
+    "filename = 'res.txt'\n",
+    "b64 = base64.b64encode(res.encode())\n",
+    "payload = b64.decode()\n",
+    "\n",
+    "#BUTTONS\n",
+    "html_buttons = '''<html>\n",
+    "<head>\n",
+    "<meta name=\"viewport\" content=\"width=device-width, initial-scale=1\">\n",
+    "</head>\n",
+    "<body>\n",
+    "<a download=\"{filename}\" href=\"data:text/csv;base64,{payload}\" download>\n",
+    "<button class=\"p-Widget jupyter-widgets jupyter-button widget-button mod-warning\">Download File</button>\n",
+    "</a>\n",
+    "</body>\n",
+    "</html>\n",
+    "'''\n",
+    "\n",
+    "html_button = html_buttons.format(payload=payload,filename=filename)\n",
+    "display(HTML(html_button))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
