--- a/4_2_1_CSV_Jupyter_Copy12.ipynb
+++ b/4_2_1_CSV_Jupyter_Copy12.ipynb
@@ -9,6 +9,8 @@
     "from ipywidgets import *\n",
     "import subprocess, sys\n",
     "import webbrowser\n",
+    "from ipywidgets import HTML\n",
+    "import base64\n",
     "import csv ## https://docs.python.org/fr/3.6/library/csv.html \n",
     "import os ## Pour utiliser la methode ci-dessous Get Current Worked Directory pour lire la page Web crée dans le dossier courant.\n",
     "Lieu = os.getcwd()  ## methode Get Current Worked Directory pour lire la page Web crée dans le dossier courant.\n",
@@ -68,6 +70,46 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def html_button_fonc(_):\n",
+    "    global selection\n",
+    "    res = str(selection)\n",
+    "#     res = '''salut david,\n",
+    "#     comment ça va ?\n",
+    "#     moi ça va super,\n",
+    "\n",
+    "#     et toi ?'''\n",
+    "\n",
+    "\n",
+    "\n",
+    "    #FILE\n",
+    "    filename = 'res.txt'\n",
+    "    b64 = base64.b64encode(res.encode())\n",
+    "    payload = b64.decode()\n",
+    "    print(type(payload))\n",
+    "\n",
+    "    #BUTTONS\n",
+    "    html_buttons = '''<html>\n",
+    "    <head>\n",
+    "    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1\">\n",
+    "    </head>\n",
+    "    <body>\n",
+    "    <a download=\"{filename}\" href=\"data:text/csv;base64,{payload}\" download>\n",
+    "    <button class=\"p-Widget jupyter-widgets jupyter-button widget-button mod-warning\">Ici</button>\n",
+    "    </a>\n",
+    "    </body>\n",
+    "    </html>\n",
+    "    '''\n",
+    "\n",
+    "    html_button = html_buttons.format(payload=payload,filename=filename)\n",
+    "    display(HTML(html_button))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -165,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,27 +340,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "#######################################\n",
     "btn_pdf = Button(icon=\"angle-left\",button_style='success')\n",
     "btn_pdf.layout.width=\"15px\"\n",
-    "btn_pdf.on_click(Create_pdf)\n",
+    "btn_pdf.on_click(html_button_fonc)# Create_pdf)\n",
     "# display(btn_pdf)\n",
     "#################"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a90a3eaed3114958bbeeeb2f7b55a83e",
+       "model_id": "6c2b53dba792485482abf0aaa05a4489",
        "version_major": 2,
        "version_minor": 0
       },
@@ -336,12 +378,23 @@
       "type = <class 'list'>\n",
       "selection =  ['CRISTAL-UNION , Bazancourt']\n",
       "type = <class 'list'>\n",
-      "selection =  ['CRISTAL-UNION , Bazancourt', 'GIVAUDAN (Ex. Soliance)']\n",
-      "type = <class 'list'>\n",
-      "selection =  ['CRISTAL-UNION , Bazancourt', 'GIVAUDAN (Ex. Soliance)', 'MHCS  (Champagne Moët et Chandon)']\n",
-      "apres btn pdf, selection = ['CRISTAL-UNION , Bazancourt', 'GIVAUDAN (Ex. Soliance)', 'MHCS  (Champagne Moët et Chandon)']\n",
-      "https://hub-binder.mybinder.ovh/user/dfialaire-test_jupyter1-0ld7sw09/files/Infos_Lieux_Stages.pdf\n"
+      "selection =  ['CRISTAL-UNION , Bazancourt', 'Delpharm Reims']\n",
+      "<class 'str'>\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2cd6c95f6dd640e4b03f4b9a99705b32",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HTML(value='<html>\\n    <head>\\n    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1\">\\n    …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -351,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,13 +415,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "22c36ffc8d754c5aafc7e28793eac874",
+       "model_id": "6b3163f8c96544f9a132af105d660aad",
        "version_major": 2,
        "version_minor": 0
       },
@@ -488,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,13 +562,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4bca1e424a49485797f6f4840275a26d",
+       "model_id": "b3de8bab3d8e483da765e9f4849560fa",
        "version_major": 2,
        "version_minor": 0
       },
@@ -528,17 +588,15 @@
     }
    ],
    "source": [
-    "from ipywidgets import HTML\n",
-    "# from IPython.display import display\n",
     "\n",
-    "import base64\n",
     "\n",
-    "res = 'david'\n",
+    "res = '''Yep !'''\n",
     "\n",
     "#FILE\n",
     "filename = 'res.txt'\n",
     "b64 = base64.b64encode(res.encode())\n",
     "payload = b64.decode()\n",
+    "print(type(payload))\n",
     "\n",
     "#BUTTONS\n",
     "html_buttons = '''<html>\n",
@@ -556,13 +614,6 @@
     "html_button = html_buttons.format(payload=payload,filename=filename)\n",
     "display(HTML(html_button))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
