--- a/4_2_1_CSV_Jupyter_Copy13.ipynb
+++ b/4_2_1_CSV_Jupyter_Copy13.ipynb
@@ -65,6 +65,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from flask import request\n",
+    "try:\n",
+    "    from urlparse import urlparse\n",
+    "except ImportError:\n",
+    "    from urllib.parse import urlparse\n",
+    "\n",
+    "frontend_url = request.META.get('HTTP_REFERER')\n",
+    "url = urlparse(frontend_url)\n",
+    "print (\"url_flask=\",url)\n",
+    "# ParseResult(scheme='https', netloc='example.com', path='/dashboard', params='', query='', fragment='')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from ipyleaflet import (\n",
     "    Map,\n",
     "    Marker, MarkerCluster,LayersControl,\n",
