--- a/4_2_1_CSV_Jupyter_Copy14.ipynb
+++ b/4_2_1_CSV_Jupyter_Copy14.ipynb
@@ -403,7 +403,7 @@
    "outputs": [],
    "source": [
     "yep=widgets.HTML(\n",
-    "    value=\"Hello  <a href='./Infos_Lieux_Stages.pdf' target='_blank'>link</a>\",\n",
+    "    value=\"Hello  <a href='../../files/Infos_Lieux_Stages.pdf' target='_blank'>link</a>\",\n",
     "    placeholder='Some HTML',\n",
     "    description='Some HTML',\n",
     ")\n",
