--- a/4_2_1_CSV_Jupyter_Copy14.ipynb
+++ b/4_2_1_CSV_Jupyter_Copy14.ipynb
@@ -6,6 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%html\n",
+    "<script defer src=\"https://use.fontawesome.com/releases/v5.0.8/js/all.js\" integrity=\"sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ\" crossorigin=\"anonymous\"></script>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from ipywidgets import *\n",
     "from IPython.display import IFrame\n",
     "from IPython.core.display import display\n",
@@ -54,35 +64,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from pathlib import Path\n",
-    "# p = Path(\"Infos_Lieux_Stages.pdf\").resolve()\n",
-    "# str(p)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from flask import request\n",
-    "# try:\n",
-    "#     from urlparse import urlparse\n",
-    "# except ImportError:\n",
-    "#     from urllib.parse import urlparse\n",
-    "\n",
-    "# frontend_url = request.META.get('HTTP_REFERER')\n",
-    "# url = urlparse(frontend_url)\n",
-    "# print (\"url_flask=\",url)\n",
-    "# # ParseResult(scheme='https', netloc='example.com', path='/dashboard', params='', query='', fragment='')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from ipyleaflet import (\n",
     "    Map,\n",
     "    Marker, MarkerCluster,LayersControl,\n",
@@ -96,46 +77,6 @@
     ")\n",
     "\n",
     "from ipywidgets import HTML"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def html_button_fonc(_):\n",
-    "    global selection\n",
-    "    res = str(selection)\n",
-    "#     res = '''salut david,\n",
-    "#     comment ça va ?\n",
-    "#     moi ça va super,\n",
-    "\n",
-    "#     et toi ?'''\n",
-    "\n",
-    "\n",
-    "\n",
-    "    #FILE\n",
-    "    filename = 'res.txt'\n",
-    "    b64 = base64.b64encode(res.encode())\n",
-    "    payload = b64.decode()\n",
-    "    print(type(payload))\n",
-    "\n",
-    "    #BUTTONS\n",
-    "    html_buttons = '''<html>\n",
-    "    <head>\n",
-    "    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1\">\n",
-    "    </head>\n",
-    "    <body>\n",
-    "    <a download=\"{filename}\" href=\"data:text/csv;base64,{payload}\" download>\n",
-    "    <button class=\"p-Widget jupyter-widgets jupyter-button widget-button mod-warning\">Ici</button>\n",
-    "    </a>\n",
-    "    </body>\n",
-    "    </html>\n",
-    "    '''\n",
-    "\n",
-    "    html_button = html_buttons.format(payload=payload,filename=filename)\n",
-    "    display(HTML(html_button))\n"
    ]
   },
   {
@@ -343,57 +284,7 @@
     "            Story.append(Paragraph(ptext, styles[\"Normal\"]))   \n",
     "    Story.append(Spacer(1, 12))\n",
     "\n",
-    "    doc.build(Story)\n",
-    "#     os.startfile(\"Infos_Lieux_Stages.pdf\")\n",
-    "######\n",
-    "#     opener = \"open\" if sys.platform == \"darwin\" else \"xdg-open\"\n",
-    "#     subprocess.call([opener, \"Infos_Lieux_Stages.pdf\"])\n",
-    "#####\n",
-    "#     try:\n",
-    "#         subprocess.Popen(['Infos_Lieux_Stages.pdf'], shell=True)\n",
-    "#     except IOError:\n",
-    "#         print ('The file is already OPENED!')\n",
-    "###########\n",
-    "#     filepath = Lieu+\"\\Infos_Lieux_Stages.pdf\"\n",
-    "#     print(\"filepath=\",filepath)\n",
-    "#     Yep = IFrame(filepath, width=700, height=400)\n",
-    "#     display(Yep)\n",
-    "#############\n",
-    "#     # url = 'https://' + 'www.google.com'\n",
-    "#     yop = \"https://hub-binder.mybinder.ovh/user/dfialaire-test_jupyter1-0ld7sw09/files\"\n",
-    "#     url = Lieu+\"/Infos_Lieux_Stages.pdf\"\n",
-    "#     print(url)\n",
-    "#     webbrowser.open(url)\n",
-    "#     subprocess.Popen([url], shell=True)\n",
-    "######\n",
-    "    # <a href=\"http://example.com/\" target=\"_blank\">link</a>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Lieu = \"https://hub-binder.mybinder.ovh/user/dfialaire-test_jupyter1-nwgcd7gd/files\"\n",
-    "# filepath = Lieu+\"/Infos_Lieux_Stages.pdf\"\n",
-    "# print(\"filepath=\",filepath)\n",
-    "# Yep = IFrame(filepath, width=700, height=400)\n",
-    "# display(Yep)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# yep=widgets.HTML(\n",
-    "#     value=\"Hello  <a href='https://hub-binder.mybinder.ovh/user/dfialaire-test_jupyter1-nwgcd7gd/files/Infos_Lieux_Stages.pdf' target='_blank'>link</a>\",\n",
-    "#     placeholder='Some HTML',\n",
-    "#     description='Some HTML',\n",
-    "# )\n",
-    "# yep\n"
+    "    doc.build(Story)\n"
    ]
   },
   {
@@ -403,11 +294,10 @@
    "outputs": [],
    "source": [
     "yep=widgets.HTML(\n",
-    "    value=\"Hello  <a href='../../files/Infos_Lieux_Stages.pdf' target='_blank'>link</a>\",\n",
-    "    placeholder='Some HTML',\n",
+    "    value=\"Cliquez :  <a href='../../files/Infos_Lieux_Stages.pdf' target='_blank'>ici</a> : pour ouvrir le pdf.\",\n",
     "    description='Some HTML',\n",
     ")\n",
-    "yep"
+    "# yep"
    ]
   },
   {
@@ -430,7 +320,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Menus = HBox([drop,select_entreprises,btn_pdf])\n",
+    "Menus = HBox([drop,select_entreprises,btn_pdf,yep])\n",
     "display(Menus)"
    ]
   },
@@ -494,10 +384,10 @@
     "        icon = AwesomeIcon(name='pills', marker_color='lightblue', icon_color='black' , icon_size=[40, 40])\n",
     "#         icon = Icon(icon_url='https://img-premium.flaticon.com/png/512/3483/3483663.png?token=exp=1627657677~hmac=01ec1a6d6f237b1bdea0e5db5a905f46', icon_size=[30, 30], icon_anchor=[10,10])\n",
     "    if li[0] == \"Cosmétique\":\n",
-    "        icon = AwesomeIcon(name='air-freshener', marker_color='pink', icon_color='black' , icon_size=[40, 40])\n",
+    "        icon = AwesomeIcon(name='eye', marker_color='pink', icon_color='black' , icon_size=[40, 40])\n",
     "#         icon = Icon(icon_url='https://img-premium.flaticon.com/png/512/3483/3483814.png?token=exp=1627657700~hmac=a4c57b57f1129517d16ef9af1b5306ca', icon_size=[30, 30], icon_anchor=[10,10])\n",
     "    if li[0] == \"Alimentaire\":\n",
-    "        icon = AwesomeIcon(name='apple-alt', marker_color='orange', icon_color='black', icon_size=[40, 40])\n",
+    "        icon = AwesomeIcon(name='coffee', marker_color='orange', icon_color='black', icon_size=[40, 40])\n",
     "#         icon = Icon(icon_url='https://img-premium.flaticon.com/png/512/3483/3483835.png?token=exp=1627657167~hmac=914e0b35ab63604b16469288e1da5c19', icon_size=[30, 30], icon_anchor=[10,10])\n",
     "        \n",
     "    mark = Marker(location=Coord, draggable=False, icon=icon, name=li[0]) # markerColor: 'green' # marker_color\n",
@@ -554,60 +444,6 @@
     "# control = LayersControl(position='topright')\n",
     "# m.add_control(control)\n",
     "m"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# m.save('my_map_yes.html', title='My Map')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from IPython.display import IFrame, display\n",
-    "# #filepath = \"http://wikipedia.org\" # works with websites too!\n",
-    "# filepath = \"file.pdf\"\n",
-    "# IFrame(filepath, width=700, height=400)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "res = '''Yep !'''\n",
-    "\n",
-    "#FILE\n",
-    "filename = 'res.txt'\n",
-    "b64 = base64.b64encode(res.encode())\n",
-    "payload = b64.decode()\n",
-    "print(type(payload))\n",
-    "\n",
-    "#BUTTONS\n",
-    "html_buttons = '''<html>\n",
-    "<head>\n",
-    "<meta name=\"viewport\" content=\"width=device-width, initial-scale=1\">\n",
-    "</head>\n",
-    "<body>\n",
-    "<a download=\"{filename}\" href=\"data:text/csv;base64,{payload}\" download>\n",
-    "<button class=\"p-Widget jupyter-widgets jupyter-button widget-button mod-warning\">Download File</button>\n",
-    "</a>\n",
-    "</body>\n",
-    "</html>\n",
-    "'''\n",
-    "\n",
-    "html_button = html_buttons.format(payload=payload,filename=filename)\n",
-    "display(HTML(html_button))"
    ]
   }
  ],
