--- a/4_2_1_CSV_Jupyter_Copy14.ipynb
+++ b/4_2_1_CSV_Jupyter_Copy14.ipynb
@@ -307,8 +307,8 @@
    "outputs": [],
    "source": [
     "#######################################\n",
-    "btn_pdf = Button(icon=\"angle-left\",button_style='success')\n",
-    "btn_pdf.layout.width=\"15px\"\n",
+    "btn_pdf = Button(icon=\"file\",button_style='warning') # cogs  # angle-left # file-pdf-o # spinner\n",
+    "btn_pdf.layout.width=\"30px\"\n",
     "btn_pdf.on_click( Create_pdf)\n",
     "# display(btn_pdf)\n",
     "#################"
